# thermal-printer

./: .gitignore  .thermal_printer.json  CHAT_HISTORY.md  NEW_EPINs.txt  README.md  epin_formatter_process.md  print.py  pyproject.toml  requirements.txt  setup.sh  temp_epins.txt  test_epins.txt
examples/: print_examples.py
src/thermal_printer/: __init__.py  __main__.py  cli.py  commands.py  config.py  connection.py  printer.py  scanner.py
